preview play button and categories, scrollbar, fixed nav

--- a/public/global.css
+++ b/public/global.css
@@ -70,3 +70,17 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+/* SCROLL BAR */
+
+body::-webkit-scrollbar-track {
+	background-color: #EFEFEF;
+	-webkit-box-shadow: inset 0 0 6px rgba(33,33,33,0.3);
+}
+body::-webkit-scrollbar {
+	width: 6px;
+	background-color: #EFEFEF;
+}
+body::-webkit-scrollbar-thumb {
+	background-color: #212121;
+}
